--- a/exhibitions.html
+++ b/exhibitions.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;400;600;800&display=swap" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/1330ccaa0c.js" crossorigin="anonymous"></script>
-    <title>Community Science Museum - Home</title>
+    <title>Community Science Museum - Exhibitions</title>
   </head>
   <body>
     <header>
