--- a/visit.html
+++ b/visit.html
@@ -27,7 +27,7 @@
           <li><a href="explore.html#researchers" class="sub-heading">Researchers</a></li>
           <li><a href="exhibitions.html" class="nav-heading">Exhibitions</a></li>
           <li><a href="exhibitions.html" class="sub-heading">Cosmology</a></li>
-          <li><a href="exhibitions.html#evolution#evolution" class="sub-heading">Evolution</a></li>
+          <li><a href="exhibitions.html#evolution" class="sub-heading">Evolution</a></li>
           <li><a href="exhibitions.html#biologyandmedicine" class="sub-heading">Biology and Medicine</a></li>
           <li><a href="exhibitions.html#roboticsandai" class="sub-heading">Robotics and AI</a></li>
           <li><a href="exhibitions.html#ecology" class="sub-heading">Ecology</a></li>
