small fixes in html

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -85,7 +85,7 @@
             <label for="email">Email</label>
             <input type="email" />
             <label for="textarea">Message</label>
-            <textarea label="Message"></textarea>
+            <textarea name="Message"></textarea>
             <input type="submit" class="cta" value="Send" />
           </form>
         </div>
