--- a/getinvolved.html
+++ b/getinvolved.html
@@ -83,9 +83,9 @@
           <p>If you want to get in touch, please fill out form, and we will get back to you shortly.</p>
           <form method="POST" class="contact-card">
             <label for="email">Email</label>
-            <input type="email" />
+            <input type="email" id="email" />
             <label for="textarea">Message</label>
-            <textarea name="Message"></textarea>
+            <textarea name="Message" id="textarea"></textarea>
             <input type="submit" class="cta" value="Send" />
           </form>
         </div>
