added current class to nav

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -26,7 +26,7 @@
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
           <li><a href="explore.html#researchers" class="sub-heading">Researchers</a></li>
-          <li><a href="exhibitions.html" class="nav-heading">Exhibitions</a></li>
+          <li><a href="exhibitions.html" class="nav-heading current">Exhibitions</a></li>
           <li><a href="exhibitions.html" class="sub-heading">Cosmology</a></li>
           <li><a href="exhibitions.html#evolution" class="sub-heading">Evolution</a></li>
           <li><a href="exhibitions.html#biologyandmedicine" class="sub-heading">Biology and Medicine</a></li>
