--- a/explore.html
+++ b/explore.html
@@ -22,7 +22,7 @@
       <nav class="navigation">
         <ul>
           <li><a href="index.html" class="nav-heading">Home</a></li>
-          <li><a href="explore.html" class="nav-heading">Explore</a></li>
+          <li><a href="explore.html" class="nav-heading current">Explore</a></li>
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
           <li><a href="explore.html#researchers" class="sub-heading">Researchers</a></li>
