--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type="checkbox" id="hamburger" />
       <nav class="navigation">
         <ul>
-          <li><a href="index.html" class="nav-heading">Home</a></li>
+          <li><a href="index.html" class="nav-heading current">Home</a></li>
           <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
