--- a/visit.html
+++ b/visit.html
@@ -36,7 +36,7 @@
           <li><a href="getinvolved.html#volunteer" class="sub-heading">Volunteer</a></li>
           <li><a href="getinvolved.html#internships" class="sub-heading">Internships</a></li>
           <li><a href="getinvolved.html#contact" class="sub-heading">Contact</a></li>
-          <li><a href="visit.html" class="nav-heading">Visit</a></li>
+          <li><a href="visit.html" class="nav-heading current">Visit</a></li>
         </ul>
       </nav>
     </header>
