--- a/getinvolved.html
+++ b/getinvolved.html
@@ -31,7 +31,7 @@
           <li><a href="exhibitions.html#biologyandmedicine" class="sub-heading">Biology and Medicine</a></li>
           <li><a href="exhibitions.html#roboticsandai" class="sub-heading">Robotics and AI</a></li>
           <li><a href="exhibitions.html#ecology" class="sub-heading">Ecology</a></li>
-          <li><a href="getinvolved.html" class="nav-heading">Get Involved</a></li>
+          <li><a href="getinvolved.html" class="nav-heading current">Get Involved</a></li>
           <li><a href="getinvolved.html" class="sub-heading">Support</a></li>
           <li><a href="getinvolved.html#volunteer" class="sub-heading">Volunteer</a></li>
           <li><a href="getinvolved.html#internships" class="sub-heading">Internships</a></li>
